# wm

./: .clang-format  .gitignore  README.md  meson.build
scripts/: build_go.sh
src/: main.cpp
src/buffer/: buffer.cpp  buffer.hpp
src/config/: config.cpp  config.hpp
src/deserialize/: deserialize.hpp
src/handlers/: handlers.cpp  handlers.hpp
src/macro/: macro.hpp
src/messages/: messages.hpp
src/nullable/: nullable.hpp
src/server/: server.cpp  server.hpp
src/server_data/: server_data.cpp  server_data.hpp
src/uid/: uid.cpp  uid.hpp
subprojects/: arg_parser.wrap  libwm.wrap  logger.wrap
utils/: meson.build
utils/fake_client_linux/: fake_client_linux.cpp  meson.build  readme.md
utils/server_data_gen/: server_data_gen.cpp
utils/server_scanner/: go.mod  main.go  meson.build
